[tool.poetry]
name = "twock"
version = "0.1.0"
description = ""
authors = ["Felix Victor Münch <flxvctr@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twarc = "^2.3.10"
pandas = "^1.3.1"
PyYAML = "^5.4.1"
ndjson = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
